# elemental

./: .coverage  .coveragerc  .flake8  .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
elemental/: __init__.py  client.py  client_test.py
elemental/templates/: device_preview.xml  generate_preview.xml  qvbr_mediastore.xml
elemental/test_templates/: create_event_request_body.xml  devices_preview_response.xml  fail_to_stop_response.xml  sample_event.xml  sample_event_list.xml  sample_single_device.xml  success_response_for_create.xml  success_response_for_generate_preview.json  success_response_for_start.xml  success_response_for_stop.xml
live/: client.py  client_test.py  client_test_new.py  test.py
live/templates/: fail_to_create_response.xml  fail_to_delete_response.xml  qvbr_mediastore.xml  sample_response_for_stop.xml
live/test_templates/: sample_device_list.xml  sample_event_list.xml  success_response_for_create.xml  success_response_for_delete.xml
scripts/: publish.sh
tests/: client_test.py
tests/fixtures/: create_event_request_body.xml  create_event_request_body_with_secondary_uri.xml  create_event_request_body_with_secondary_uri_zixi_key.xml  sample_event_list.xml
